--- a/index.html
+++ b/index.html
@@ -26,8 +26,23 @@
                 Me</a>
         </div>
         <div class="half-width">
-            <img src="portfolio image.png" alt="">
+            <img src="portfolio image.png">
         </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="dream-big.png">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Web Developer</h2>
+            <p>I am practical, responsible, cooperative with everyone. My sincerity and self-motivation always help me
+                to reach my goals in life. Because of my interest in IT, I am trying to become a web developer. If I do
+                not know something or facing a problem to solve the task, I always try my best to solve it with the help
+                of Google until I reach the goal.</p>
+            <a class="link-button" target="_blank" href="DOWNLOAD RESUME">Download Resume</a>
+        </div>
+
     </section>
 </body>
 
