--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="brown-color">Lira Zohra</span> world!</h1>
@@ -29,7 +29,7 @@
             <img src="portfolio image.png">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="dream-big.png">
         </div>
@@ -42,8 +42,34 @@
                 of Google until I reach the goal.</p>
             <a class="link-button" target="_blank" href="DOWNLOAD RESUME">Download Resume</a>
         </div>
+    </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-experience" class="experience-item">
+                <h2>Full Stack Developer</h2>
+                <h3 class="brown-color">2022-Present | Pro Level Developer</h3>
+                <p>No matter how complex the work it's gonna be, or how difficult is the problem, there's always two
+                    ways to
+                    find the solution, the lucky one or the efficient one. My objective it's to always go for the most
+                    EFECTIVE and EFFICIENT, because there's nothing that a work well done.</p>
+            </div>
+            <div id="web-dev-experience" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="brown-color">2022-2024 | Hero Learner Developer</h3>
+                <p>Even outside my hours, I'm always thinking, how can I make my work better every day. Brainstorming is
+                    a
+                    good opportunity for the team to exchange ideas and come up with creative ways of doing things. I
+                    believe collaboration within a group can help solve difficult problems. No matter how big the
+                    problem is
+                    or are, there's always gonna be an way to solve it.</p>
+            </div>
+        </div>
 
     </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
